# quadcopter_simulation_gazebo

./: CMakeLists.txt  HIL_connect.cpp  HIL_connect.txt  HIL_quad_control.cpp  README.md  autopilot_interface.cpp  autopilot_interface.h  basic_quad_control.cpp  gazebo_wind_plugin.cpp  generic_port.h  iris_testing.world  naive_controller.cpp  read_from_sim.cpp  rotor_plugin.cpp  serial_port.cpp  serial_port.h  set_rotor_vel.cpp  set_rotor_vel.hpp  todo_list.txt  udp_port.h
archived_build/: CMakeCache.txt  basic_quad_control  test_data.txt
archived_build/iris_test_fpv/: iris_test.sdf
include/: HIL_quad_control.hpp  basic_quad_control.hpp  common.hpp  gazebo_wind_plugin.h  hil_connect.hpp  hover_env_control.hpp  motor_model.hpp  naive_controller.hpp  rotor_plugin.hpp  set_rotor_vel.hpp
include/geometric_include/: geometric_control.h  geometric_control.hpp  quadcopter.h  quadcopter.hpp  trajectory.h
include/hover_env_include/: hover_env_control.hpp
iris_platform_analysis/: geo_pos_analysis.py  geo_troubleshooting.py  min_snap_testing.py  motor_thrust_torque_analysis.py  pos_att_analysis.py
iris_platform_analysis/sim_test_data/: file_cleaned.csv  test_data.txt  testdata_cont.txt  troubleshooting.txt
iris_platform_analysis/sim_test_data/hover_env/: hover_test_kd3_cleaned.csv  hover_test_kd4.txt  intermediate_controller_cleaned.csv  iris_stiff.csv  iris_stiff_4steps.txt  roll_test1_cleaned.csv  roll_test2.txt  roll_test6_cleaned.csv  roll_test7_cleaned.csv
iris_platform_analysis/sim_test_data/hover_test_async/fixing_hover/: hover_test_kd1.txt  hover_test_kd1_cleaned.csv  hover_test_kd2.txt  hover_test_kd2_cleaned.csv  hover_test_kd3.txt  hover_test_kd4_cleaned.csv
iris_platform_analysis/sim_test_data/hover_test_async/fixing_roll/: roll_test1.txt  roll_test2_cleaned.csv  roll_test3.txt  roll_test3_cleaned.csv  roll_test4.txt  roll_test4_cleaned.csv  roll_test5.txt  roll_test5_cleaned.csv  roll_test6.txt  roll_test7.txt
iris_platform_analysis/sim_test_data/hover_test_sync/: hover_test_sync.txt  hover_test_sync_cleaned.csv
iris_platform_analysis/sim_test_data/iris_controller/intermediate_controller/: intermediate_controller.txt
iris_platform_analysis/sim_test_data/iris_controller/soft_controller/: soft_controller.txt  soft_controller_cleaned.csv
iris_platform_analysis/sim_test_data/iris_controller/stiff_controller/: iris_stiff_4steps_cleaned.csv  iris_stiff_cleaned.txt
iris_test/: iris_test.sdf
iris_test_fpv/: iris_test_old.sdf  model.config
msgs/: CMakeLists.txt  header.proto  local_pose.pb.h  local_pose.proto  local_poses_stamped.proto  local_quaternion.proto  local_vector3d.proto  vector3d.pb.cc  vector3d.pb.h  vector3d.proto
msgs/include/: local_pose.pb.cc  local_poses_stamped.pb.cc  local_poses_stamped.pb.h  local_quaternion.pb.cc  local_quaternion.pb.h  local_vector3d.pb.cc  local_vector3d.pb.h
src/: hover_env_control.cpp  rotor_plugin.cpp
src/geometric_src/: controller.cpp  geometric_control.cpp  quadcopter.cpp  trajectory.cpp
src/hover_env_src/: hover_env_control.cpp
