INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER CommandMotorSpeed.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER Float.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER MotorSpeed.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER Wind.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER vector3d.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER header.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER time.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER local_poses_stamped.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})